--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "customize-ibus",
-  "version": "3",
+  "version": "3.0.0",
   "description": "Customize IBus for orientation, theme, font and ascii mode auto-switch.",
   "dependencies": {
     "eslint": "^7.21.0",
     "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-gjs": "^1.0.4",
     "eslint-plugin-prettier": "^3.3.1",
     "husky": "^5.1.3",
     "lint-staged": "^10.5.4",
@@ -18,14 +17,14 @@
   },
   "eslintConfig": {
     "plugins": [
-      "prettier",
-      "gjs"
+      "prettier"
     ],
     "extends": [
-      "plugin:prettier/recommended",
-      "plugin:gjs/extension"
+      "plugin:prettier/recommended"
     ],
-    "ignorePatterns": [],
+    "ignorePatterns": [
+      "**/prefs.js"
+    ],
     "rules": {
       "prettier/prettier": "error"
     },
