v14: Strip the current function of extracting IBus style from Gnome shell theme
Implement using CSS parser libraries in Python instead of regular expression.
Additional IBus style sheets are generated for users to modify and test.

Modify this extension to accept IBus style sheets provided by users for
style application.

Signed-off-by: Hollow Man <hollowman@hollowman.ml>

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "customize-ibus",
-  "version": "11.0.0",
+  "version": "14.0.0",
   "description": "Customize IBus for orientation, shell theme, background picture, font and ascii mode auto-switch.",
   "dependencies": {
     "eslint": "^7.21.0",
@@ -22,9 +22,7 @@
     "extends": [
       "plugin:prettier/recommended"
     ],
-    "ignorePatterns": [
-      "**/prefs.js"
-    ],
+    "ignorePatterns": [],
     "rules": {
       "prettier/prettier": "error"
     },
