--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "customize-ibus",
-  "version": "44.0.0",
-  "description": "Customize IBus for orientation, animation, font, ascii mode auto-switch, reposition, system tray menu entries, input source indicator; theme and background picture follow GNOME Night Light Mode.",
+  "version": "46.0.0",
+  "description": "Customize IBus for orientation, animation, font, ASCII mode auto-switch, reposition, system tray menu entries, input source indicator. Theme and background picture follow GNOME Night Light Mode.",
   "dependencies": {
     "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.3.0",
