--- a/deb/debian/control
+++ b/deb/debian/control
@@ -3,11 +3,11 @@ Section: system
 Priority: optional
 Maintainer: Hollow Man <hollowman@hollowman.ml>
 Build-Depends: debhelper
-Standards-Version: 43
+Standards-Version: 45
 Homepage: https://extensions.gnome.org/extension/4112/customize-ibus/
 
 Package: gnome-shell-extension-customize-ibus
 Architecture: all
 Depends: gnome-shell, gnome-tweaks
-Description: Customize IBus for orientation, animation, font, ascii mode auto-switch, reposition, system tray menu entries, input source indicator; theme and background picture follow GNOME Night Light Mode.
+Description: Customize IBus for orientation, animation, font, ASCII mode auto-switch, reposition, system tray menu entries, input source indicator. Theme and background picture follow GNOME Night Light Mode.
   在 GNOME Shell 中更改 IBus 的候选框方向、动画、字体、输入法默认语言、移动、系统托盘菜单、输入源指示器，主题、背景图片跟随 GNOME 夜灯模式自动切换。
