v61: Add scroll on candidates box to switch among pages or candidates, scroll on indicator to switch input source
Signed-off-by: Hollow Man <hollowman@hollowman.ml>

--- a/Customize_IBus_Settings_Example.ini
+++ b/Customize_IBus_Settings_Example.ini
@@ -1,17 +1,24 @@
 [/]
-candidate-box-position={'x': uint32 371, 'y': 326}
+candidate-box-position={'x': uint32 583, 'y': 338}
+candidate-orientation=uint32 1
+candidate-scroll-mode=uint32 0
 custom-bg='/home/hollowman/图片/light.jpg'
 custom-bg-dark='/home/hollowman/图片/dark.jpg'
+custom-bg-mode=uint32 2
+custom-bg-repeat-mode=uint32 1
 custom-theme='/home/hollowman/stylesheet-light.css'
 custom-theme-dark='/home/hollowman/stylesheet-dark.css'
 enable-custom-theme=true
 enable-custom-theme-dark=true
 enable-orientation=true
 fix-ime-list=true
-ibus-restart-time='1622033006489'
-indicator-left-click-func=uint32 1
+ibus-restart-time='1624175579630'
+indicator-custom-font='文泉驿点阵正黑 Medium 16'
+indicator-left-click-func=uint32 0
+input-indicator-hide-time=uint32 1
 input-indicator-right-close=true
-input-mode-list={'undefined': false, '': false, 'gjs': false, 'org.gnome.nautilus': false, 'google-chrome-beta': false, 'gedit': false, 'gnome-terminal': true, 'code': false}
+input-indicator-use-scroll=true
+input-mode-list={'undefined': false, '': false, 'qv2ray': false, 'gjs': false, 'org.gnome.nautilus': false, 'google-chrome-beta': false, 'gedit': false, 'gnome-terminal': true, 'code': false}
 input-mode-remember=uint32 0
 menu-ibus-emoji=true
 menu-ibus-exit=true
@@ -19,11 +26,17 @@ menu-ibus-preference=true
 menu-ibus-restart=true
 menu-ibus-version=true
 use-candidate-box-right-click=true
+use-candidate-buttons=false
 use-candidate-reposition=true
+use-candidate-scroll=true
+use-candidate-still=false
 use-custom-bg=true
 use-custom-bg-dark=true
 use-custom-font=true
+use-indicator-auto-hide=true
+use-indicator-custom-font=true
 use-indicator-left-click=true
 use-indicator-reposition=true
+use-input-indicator=true
 use-popup-animation=true
 use-tray-click-source-switch=true
