v68: Add functionality to modify opacity.
Signed-off-by: Hollow Man <hollowman@hollowman.ml>

--- a/Customize_IBus_Settings_Example.ini
+++ b/Customize_IBus_Settings_Example.ini
@@ -1,24 +1,27 @@
 [/]
-candidate-box-position={'x': uint32 583, 'y': 338}
-candidate-orientation=uint32 1
+candidate-box-position={'x': uint32 0, 'y': 0}
+candidate-opacity=uint32 210
+candidate-orientation=uint32 0
 candidate-scroll-mode=uint32 0
 custom-bg='/home/hollowman/图片/light.jpg'
 custom-bg-dark='/home/hollowman/图片/dark.jpg'
 custom-bg-mode=uint32 2
 custom-bg-repeat-mode=uint32 1
-custom-theme='/home/hollowman/stylesheet-light.css'
+custom-font='Sans 16'
+custom-theme='/home/hollowman/stylesheet.css'
 custom-theme-dark='/home/hollowman/stylesheet-dark.css'
 enable-custom-theme=true
 enable-custom-theme-dark=true
 enable-orientation=true
 fix-ime-list=true
-ibus-restart-time='1624175579630'
-indicator-custom-font='文泉驿点阵正黑 Medium 16'
+ibus-restart-time='1625063857427'
+indicator-custom-font='Sans Bold 16'
 indicator-left-click-func=uint32 0
-input-indicator-hide-time=uint32 1
+indicator-opacity=uint32 210
+input-indicator-hide-time=uint32 2
 input-indicator-right-close=true
 input-indicator-use-scroll=true
-input-mode-list={'undefined': false, '': false, 'qv2ray': false, 'gjs': false, 'org.gnome.nautilus': false, 'google-chrome-beta': false, 'gedit': false, 'gnome-terminal': true, 'code': false}
+input-mode-list={'undefined': true, '': false, 'gjs': false, 'org.gnome.nautilus': false, 'google-chrome-beta': false, 'gedit': false, 'gnome-terminal': true, 'code': false, 'org.gnome.shell.extensions': true}
 input-mode-remember=uint32 0
 menu-ibus-emoji=true
 menu-ibus-exit=true
@@ -27,6 +30,7 @@ menu-ibus-restart=true
 menu-ibus-version=true
 use-candidate-box-right-click=true
 use-candidate-buttons=false
+use-candidate-opacity=true
 use-candidate-reposition=true
 use-candidate-scroll=true
 use-candidate-still=false
@@ -36,7 +40,9 @@ use-custom-font=true
 use-indicator-auto-hide=true
 use-indicator-custom-font=true
 use-indicator-left-click=true
+use-indicator-opacity=true
 use-indicator-reposition=true
 use-input-indicator=true
 use-popup-animation=true
+use-tray=true
 use-tray-click-source-switch=true
