--- a/deb/debian/control
+++ b/deb/debian/control
@@ -1,5 +1,5 @@
 Source: gnome-shell-extension-customize-ibus
-Section: system
+Section: gnome
 Priority: optional
 Maintainer: Hollow Man (Domain Address) <hollowman@hollowman.ml>
 Build-Depends: debhelper
