--- a/.github/workflows/npm-lint.yml
+++ b/.github/workflows/npm-lint.yml
@@ -19,5 +19,6 @@ jobs:
         with:
           node-version: 14
           cache: 'npm'
+          cache-dependency-path: '**/package-lock.json'
       - run: npm install
       - run: npm run lint
