V76: Support auto-manage the ASCII Mode list
and a show delay for input source indicator. #15

Signed-off-by: Hollow Man <hollowman@hollowman.ml>

--- a/Customize_IBus_Settings_Example.ini
+++ b/Customize_IBus_Settings_Example.ini
@@ -20,6 +20,7 @@ indicator-left-click-func=uint32 0
 indicator-opacity=uint32 210
 input-indicator-hide-time=uint32 2
 input-indicator-right-close=true
+input-indicator-show-time=uint32 1
 input-indicator-use-scroll=true
 input-mode-list={'undefined': true, '': false, 'gjs': false, 'org.gnome.nautilus': false, 'google-chrome-beta': false, 'gedit': false, 'gnome-terminal': true, 'code': false, 'org.gnome.shell.extensions': true}
 input-mode-remember=uint32 0
@@ -42,6 +43,7 @@ use-indicator-custom-font=true
 use-indicator-left-click=true
 use-indicator-opacity=true
 use-indicator-reposition=true
+use-indicator-show-delay=true
 use-input-indicator=true
 use-popup-animation=true
 use-tray=true
