V76: Support hide input source indicator when
using single mode IME. #15

Signed-off-by: Hollow Man <hollowman@hollowman.ml>

--- a/Customize_IBus_Settings_Example.ini
+++ b/Customize_IBus_Settings_Example.ini
@@ -19,6 +19,7 @@ indicator-custom-font='Sans Bold 16'
 indicator-left-click-func=uint32 0
 indicator-opacity=uint32 210
 input-indicator-hide-time=uint32 2
+input-indicator-not-on-single-ime=true
 input-indicator-right-close=true
 input-indicator-show-time=uint32 1
 input-indicator-use-scroll=true
