Update email address
Signed-off-by: Hollow Man <hollowman@opensuse.org>

--- a/customize_ibus.conf
+++ b/customize_ibus.conf
@@ -1,5 +1,5 @@
 customize_ibus: {
-  url: "pkg+http://opensuse.github.io/Customize-IBus/pkg",
+  url: "pkg+https://opensuse.github.io/Customize-IBus/pkg",
   mirror_type: "srv",
   enabled: yes
 }
